--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,15 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.18",
+    "@types/pg": "^8.15.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
