--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,5 +6,9 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true
+  },
+  "scripts": {
+  "build": "tsc",
+  "dev": "ts-node-dev src/index.ts"
   }
 }
