--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   db:
     image: postgres
-    restart: always
+    container_name: tppe_database
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -11,7 +11,32 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - minha-rede
+
+  backend:
+    build: ./backend
+    container_name: tppe_backend
+    ports:
+      - "3001:3001"
+    depends_on:
+      - db
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: tppe
+    networks:
+      - minha-rede
+    volumes:
+      - ./backend:/app
+    command: sh -c "npm install && npm run dev"
 
 volumes:
-  postgres_data:
+  pgdata:
+
+networks:
+  minha-rede:
+    driver: bridge
