--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@prisma/client": "^6.10.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.10.0"
@@ -21,6 +22,7 @@
     "@types/pg": "^8.15.1",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
+    "prisma": "^6.10.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.2",
     "ts-node-dev": "^2.0.0",
