--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres
@@ -32,7 +30,7 @@ services:
       - minha-rede
     volumes:
       - ./backend:/app
-    command: sh -c "npm install && npm run test && npm run dev"
+    command: sh -c "npm install && npx prisma migrate deploy && npm run test && npm run dev"
 
 volumes:
   pgdata:
