--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       DB_NAME: tppe
     networks:
       - minha-rede
+    env_file:
+      - ./backend/.env
     volumes:
       - ./backend:/app
     command: sh -c "npm install && npx prisma migrate deploy && npm run test || true && npm run dev"
