--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,16 +35,21 @@ services:
     command: sh -c "npm install && npx prisma migrate deploy && npm run test || true && npm run dev"
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend  
+      dockerfile: Dockerfile
     container_name: tppe_frontend
     ports:
       - "3000:3000"
-    depends_on:
-      - backend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     networks:
       - minha-rede
-    environment:
-      - NODE_ENV=production
+    depends_on:
+      - backend
 
 volumes:
   pgdata:
