--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,22 +1,11 @@
-FROM node:20 AS builder
+FROM node:20-alpine
+
 WORKDIR /app
 
-COPY package.json package-lock.json* ./
+COPY package*.json ./
+
 RUN npm install
-
-COPY . .
-RUN npm run build
-
-FROM node:20 AS runner
-WORKDIR /app
-
-ENV NODE_ENV=production
-
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/node_modules ./node_modules
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
