--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,19 @@
   "dependencies": {
     "@prisma/client": "^6.10.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^18.16.18",
     "@types/pg": "^8.15.1",
     "@types/supertest": "^6.0.3",
