feat(frontend): refresh user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     build:
       context: ./frontend  
       dockerfile: Dockerfile
+    tty: true
     container_name: tppe_frontend
     ports:
       - "3000:3000"
