--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -71,7 +71,7 @@ jobs:
         DB_NAME: tppe
 
     - name: Instalar Dependências do Backend
-      run: npm install
+      run: npm install --unsafe-perm
       working-directory: ./backend 
 
     - name: Rodar Migrações do Banco de Dados
