--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -75,10 +75,8 @@ jobs:
         DB_NAME: tppe
 
     - name: Instalar Dependências do Backend
-      run: npm install
+      run: npm install --omit=optional
       working-directory: ./backend
-      env:
-        npm_config_optional: false
 
     - name: Rodar Migrações do Banco de Dados
       run: npx prisma migrate deploy
