feat: Atualizar o main-ci.yml

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -64,6 +64,10 @@ jobs:
       run: npm install --omit=optional
       working-directory: ./backend
 
+    - name: Rodar generate
+      run: npx prisma generate
+      working-directory: ./backend
+
     - name: Rodar Migrações do Banco de Dados
       run: npx prisma migrate deploy
       working-directory: ./backend 
